see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note


07-Sep-2010 Jean-Marie Simonet
 # [#21666] New menu : form is empty when using the "Save" button. Thanks Michael.
 # [#22287] Save & New button in Menu Edit views. Thanks Michael.
 # [#22245] Default site metadata. Thanks Ole.

-------------------- 1.6.0 Beta9 Release [07-Sep-2010] ------------------

07-Sep-2010 Ian MacLennan
 # Updating sample data

06-Sep-2010 Ron Severdia
 # [#20942] Fixed extra whitespace in fieldsets (Thanks Viet Hoang Vu)
 ^ Updated Blueprint cheatsheet
 ^ Updated backend users icon
 # [#21746] Bluestork display issue with Permissions views in IE7
 
06-Sep-2010 Ian MacLennan
 # [#21573] Error in flash uploader
 # [#22018] The alert of "failed" creating a menu item doesn't look like a Failed (admin default template)
 # [#22076] Update Site manager tries to create duplicate entries on second install if extension adapter behaves pathologically
 # [#22198] Weblinks module follow/no follow description
 # [#22204] surplus image in bluestork
 # [#22205] unpublished menu items visible
 # [#22220] Admin Menu Flyouts not respecting ACL
 # [#22241] Everyone with Manage can checkin
 # [#22256] Language string definition missing on front end.

06-Sep-2010 Jean-Marie Simonet
 # [#22053] sample data article capitalisation. Thanks Tim.
 $ [#22272] Database Error. Thanks Bill.

06-Sep-2010 Andrew Eddie
 # Fixed issue [#22246] Remove potty mouth language from htaccess (Brian Teeman, Bill Richardson).
 # Fixed issue [#22273] This is a demo. Delete for beta (Michael Babker).
 # Fixed issue [#21658] Marking items as required (Michael Babker, Bill Richardson).

05-Sep-2010 Jean-Marie Simonet