@@ -27,6 +27,8 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+08-Sep-2010 Andrew Eddie
+ # Fixed issue [#22274] Mark items as required that prevent save (Michael Babker).
 
 07-Sep-2010 Jean-Marie Simonet
  # [#21666] New menu : form is empty when using the "Save" button. Thanks Michael.
